The Reddit Project - added that all endpoints after login require right username to be working

--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/new-post.html
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/new-post.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Submit a new post</h1>
 
-    <form action="/submit" method="post">
+    <form action="./submit" method="post">
         <label>Title:
             <input type="text" name="title">
         </label>
