The Reddit Project - working on some visual sprinkles

--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/static/styles.css
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/static/styles.css
@@ -1,11 +1,98 @@
-.link-button {
-    background: none!important;
-    border: none;
-    padding: 0!important;
-    /*optional*/
-    font-family: "Times New Roman", sans-serif;
-    /*input has OS specific font-family*/
-    color: #640ff2;
-    text-decoration: underline;
-    cursor: pointer;
+* {
+    font-family: Arial , sans-serif;
 }
+
+body {
+    margin-left: 30%;
+    margin-right: 30%;
+    width: auto;
+    min-width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #dbe0e6;
+}
+
+h1 {
+    margin-bottom: 5px;
+
+    align-self: flex-start;
+
+    font-size: small;
+    font-weight: bold;
+}
+
+.posts {
+    width: 100%;
+    min-width: 450px;
+}
+
+.post {
+    margin-bottom: 10px;
+    background-color: #ffffff;
+    border: 1px solid #cecfd0;
+    border-radius: 4px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: flex-start;
+}
+
+.post:hover {
+    border-color: black;
+}
+
+.voting {
+    background-color: #f8f9fa;
+    min-width: 30px;
+
+    font-weight: bold;
+    font-size: 11px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.voting button {
+    /*background-color: red;*/
+}
+
+.post-main {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.date {
+    margin: 5px;
+
+    color: #7a7d7f;
+    font-size: 9px;
+}
+
+.title {
+    margin: 0 5px 5px;
+}
+
+.title a {
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/*.link-button {*/
+/*    background: none!important;*/
+/*    border: none;*/
+/*    padding: 0!important;*/
+/*    !*optional*!*/
+/*    font-family: "Times New Roman", sans-serif;*/
+/*    !*input has OS specific font-family*!*/
+/*    color: #640ff2;*/
+/*    text-decoration: underline;*/
+/*    cursor: pointer;*/
+/*}*/
