--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/static/styles.css
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/static/styles.css
@@ -3,10 +3,11 @@
 }
 
 body {
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: auto;
+    margin-right: auto;
     width: auto;
     min-width: 450px;
+    max-width: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,9 +30,9 @@ h1 {
 
 .post {
     margin-bottom: 10px;
-    background-color: #ffffff;
     border: 1px solid #cecfd0;
     border-radius: 4px;
+    background-color: #ffffff;
 
     display: flex;
     flex-direction: row;
@@ -40,13 +41,14 @@ h1 {
 }
 
 .post:hover {
-    border-color: black;
+    border-color: #98999a;
 }
 
 .voting {
     background-color: #f8f9fa;
     min-width: 30px;
 
+    border-radius: 4px;
     font-weight: bold;
     font-size: 11px;
 
@@ -56,7 +58,47 @@ h1 {
 }
 
 .voting button {
-    /*background-color: red;*/
+    height: 20px;
+    width: 20px;
+    margin: 6px;
+    background-color: #f8f9fa;
+    border: 0;
+    border-radius: 3px;
+    color: #878a8c;
+    font-weight: bolder;
+    font-size: 15px;
+    line-height: 15px;
+    padding: 0;
+}
+
+.voting button.up {
+    margin-bottom: 0px;
+}
+
+.voting button.down {
+    margin-top: 0px;
+}
+
+.voting button:hover {
+    background-color: #e2e2e3;
+}
+
+.voting button.up:hover {
+    color: #bf3514;
+}
+
+.voting button.down:hover {
+    color: #6079c9;
+}
+
+.voting button:active {
+    background-color: #cdcecf;
+    outline: none;
+}
+
+.voting button:focus {
+    background-color: #cdcecf;
+    outline: 0;
 }
 
 .post-main {
@@ -76,7 +118,7 @@ h1 {
 }
 
 .title {
-    margin: 0 5px 5px;
+    margin: 0 15px 5px 5px;
 }
 
 .title a {
@@ -85,14 +127,21 @@ h1 {
     text-decoration: none;
 }
 
-/*.link-button {*/
-/*    background: none!important;*/
-/*    border: none;*/
-/*    padding: 0!important;*/
-/*    !*optional*!*/
-/*    font-family: "Times New Roman", sans-serif;*/
-/*    !*input has OS specific font-family*!*/
-/*    color: #640ff2;*/
-/*    text-decoration: underline;*/
-/*    cursor: pointer;*/
-/*}*/
+.title a:hover {
+    text-decoration: underline;
+}
+
+.pagination a {
+    color: black;
+    padding: 5px;
+    border: 1px solid #cecfd0;
+    border-radius: 4px;
+    background-color: #ffffff;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    border: 1px solid #cecfd0;
+    background-color: #e2e2e3;
+}
+
