The Reddit Project - some final touches (added favicon)

--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/new-post.html
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/new-post.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Submit a new post</title>
+    <link rel="icon" href="https://www.redditstatic.com/desktop2x/img/favicon/favicon-32x32.png">
 </head>
 <body>
     <h1>Submit a new post</h1>
