--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/register.html
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/register.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link rel="icon" href="https://www.redditstatic.com/desktop2x/img/favicon/favicon-32x32.png">
 </head>
 <body>
     <h1>Register as new user</h1>
