--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/trending-posts.html
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/templates/trending-posts.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="https://www.redditstatic.com/desktop2x/img/favicon/favicon-32x32.png">
     <title>The Reddit</title>
 </head>
 <body>
